@@ -10,5 +10,5 @@ RUN --mount=type=cache,target=/root/.m2/repository mvn $MAVEN_CLI_OPTS clean pac
 FROM openjdk:14-jdk AS DEPLOY
 WORKDIR /app
 COPY --from=BUILD /build/target/*-cpu.jar /app/app.jar
-ENV _JAVA_OPTIONS "-Xmx64m -Xms32m -Djava.security.file=file:/dev/./urandom"
+ENV _JAVA_OPTIONS "-Xmx64m -Xms64m -Djava.security.file=file:/dev/./urandom -XX:+UnlockExperimentalVMOptions -XX:+UseZGC"
 CMD java -jar /app/app.jar
